# dbx_build_tools

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
build_tools/: BUILD
build_tools/bazel/: BUILD  external_workspace.bzl  runfiles.tmpl
build_tools/build-merge/: BUILD.bazel
build_tools/build-sqfs/: BUILD.bazel  main.go
build_tools/codegen/: BUILD.bazel
build_tools/codegen/proto/: BUILD.bazel
build_tools/gen-build-go/: BUILD.bazel  gen-build-go.go
build_tools/gocov2cobertura/: BUILD.bazel  gocov2cobertura.go
build_tools/gojunit/: BUILD.bazel  gojunit.go
build_tools/gojunit/gojunit/: BUILD.bazel  main.go
build_tools/junit/: BUILD.bazel
build_tools/logwriter/: BUILD.bazel
build_tools/py/: toolchain.bzl
build_tools/services/: BUILD  restart_test.sh  svc.bzl
build_tools/svcctl/: BUILD.bazel  processor.go  service.go  service_test.go  topological_starter.go  topological_stopper.go
build_tools/svcctl/cmd/svcctl/: BUILD.bazel  svcctl.go
build_tools/svcctl/cmd/svcd/: BUILD.bazel  svcd.go
build_tools/svcctl/cmd/svcinit/: BUILD.bazel  svcinit.go  xml_mangling_test.go
build_tools/svcctl/proc/: BUILD.bazel  proc_test.go
build_tools/svcctl/state_machine/: BUILD.bazel  state_machine.go
build_tools/svcctl/svclib/: BUILD.bazel  healthchecks.go  service.go  service_test.go
build_tools/svcctl/topological/: BUILD.bazel
cputime/: BUILD.bazel  cputime.go
devtools/coverage/cobertura/coberturaxml/: BUILD.bazel
go/src/dropbox/build_tools/bazel/: BUILD
go/src/dropbox/build_tools/build-merge/: BUILD
go/src/dropbox/build_tools/build-sqfs/: BUILD
go/src/dropbox/build_tools/codegen/: BUILD
go/src/dropbox/build_tools/codegen/proto/: BUILD
go/src/dropbox/build_tools/gen-build-go/: BUILD
go/src/dropbox/build_tools/gocov2cobertura/: BUILD
go/src/dropbox/build_tools/gojunit/: BUILD
go/src/dropbox/build_tools/gojunit/gojunit/: BUILD
go/src/dropbox/build_tools/junit/: BUILD
go/src/dropbox/build_tools/logwriter/: BUILD
go/src/dropbox/build_tools/svcctl/: BUILD
go/src/dropbox/build_tools/svcctl/proc/: BUILD
go/src/dropbox/build_tools/svcctl/state_machine/: BUILD
go/src/dropbox/build_tools/svcctl/svclib/: BUILD
go/src/dropbox/build_tools/svcctl/topological/: BUILD
go/src/dropbox/cputime/: BUILD
go/src/dropbox/procfs/: BUILD
go/src/dropbox/proto/build_tools/svclib/: BUILD
go/src/dropbox/proto/mypy/: BUILD
go/src/dropbox/runfiles/: BUILD
go/src/github.com/bazelbuild/buildtools/api_proto/: BUILD
go/src/github.com/bazelbuild/buildtools/build_proto/: BUILD
go/src/github.com/bazelbuild/buildtools/buildifier/: BUILD
go/src/github.com/bazelbuild/buildtools/buildifier2/: BUILD
go/src/github.com/bazelbuild/buildtools/buildozer/: BUILD
go/src/github.com/bazelbuild/buildtools/bzlenv/: BUILD
go/src/github.com/bazelbuild/buildtools/config/: BUILD
go/src/github.com/bazelbuild/buildtools/convertast/: BUILD
go/src/github.com/bazelbuild/buildtools/deps_proto/: BUILD
go/src/github.com/bazelbuild/buildtools/differ/: BUILD
go/src/github.com/bazelbuild/buildtools/edit/: BUILD
go/src/github.com/bazelbuild/buildtools/extra_actions_base_proto/: BUILD
go/src/github.com/bazelbuild/buildtools/file/: BUILD
go/src/github.com/bazelbuild/buildtools/generatetables/: BUILD
go/src/github.com/bazelbuild/buildtools/labels/: BUILD
go/src/github.com/bazelbuild/buildtools/lang/: BUILD
go/src/github.com/bazelbuild/buildtools/tables/: BUILD
go/src/github.com/bazelbuild/buildtools/testutils/: BUILD
go/src/github.com/bazelbuild/buildtools/unused_deps/: BUILD
go/src/github.com/bazelbuild/buildtools/warn/: BUILD
go/src/github.com/bazelbuild/buildtools/wspace/: BUILD
go/src/github.com/c9s/goprocinfo/linux/: BUILD
go/src/github.com/chzyer/readline/: BUILD
go/src/github.com/davecgh/go-spew/spew/: BUILD
go/src/github.com/gogo/protobuf/codec/: BUILD
go/src/github.com/gogo/protobuf/conformance/: BUILD
go/src/github.com/stretchr/objx/: BUILD
go/src/github.com/yuin/goldmark/: BUILD
go/src/go.starlark.net/cmd/starlark/: BUILD
go/src/go.starlark.net/internal/chunkedfile/: BUILD
go/src/go.starlark.net/internal/compile/: BUILD
go/src/go.starlark.net/internal/spell/: BUILD
go/src/go.starlark.net/lib/json/: BUILD
go/src/go.starlark.net/lib/math/: BUILD
go/src/go.starlark.net/lib/proto/: BUILD
go/src/go.starlark.net/lib/time/: BUILD
go/src/go.starlark.net/repl/: BUILD
go/src/go.starlark.net/resolve/: BUILD
go/src/go.starlark.net/starlark/: BUILD
go/src/go.starlark.net/starlarkjson/: BUILD
go/src/go.starlark.net/starlarkstruct/: BUILD
go/src/go.starlark.net/starlarktest/: BUILD
go/src/go.starlark.net/syntax/: BUILD
go/src/golang.org/x/term/: BUILD
go/src/golang.org/x/text/: BUILD
go/src/golang.org/x/xerrors/: BUILD
go/src/google.golang.org/grpc/: BUILD
go/src/google.golang.org/grpc/attributes/: BUILD
go/src/google.golang.org/grpc/backoff/: BUILD
go/src/google.golang.org/grpc/balancer/: BUILD
go/src/google.golang.org/grpc/codes/: BUILD
go/src/google.golang.org/grpc/connectivity/: BUILD
go/src/google.golang.org/grpc/credentials/: BUILD
go/src/google.golang.org/grpc/encoding/: BUILD
go/src/google.golang.org/grpc/grpclog/: BUILD
go/src/google.golang.org/grpc/health/: BUILD
go/src/google.golang.org/grpc/internal/: BUILD
go/src/google.golang.org/grpc/keepalive/: BUILD
go/src/google.golang.org/grpc/metadata/: BUILD
go/src/google.golang.org/grpc/peer/: BUILD
go/src/google.golang.org/grpc/reflection/: BUILD
go/src/google.golang.org/grpc/resolver/: BUILD
go/src/google.golang.org/grpc/serviceconfig/: BUILD
go/src/google.golang.org/grpc/stats/: BUILD
go/src/google.golang.org/grpc/status/: BUILD
go/src/google.golang.org/grpc/tap/: BUILD
go/src/google.golang.org/protobuf/proto/: BUILD
go/src/gopkg.in/check.v1/: BUILD
go/src/gopkg.in/yaml.v2/: BUILD
procfs/: BUILD.bazel  procfs.go  stat.go  stat_test.go
proto/build_tools/svclib/: BUILD.bazel
proto/mypy/: BUILD.bazel
runfiles/: BUILD.bazel  runfiles_test.go
(+542 files in other folders)
