load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "procfs",
    srcs = [
        "procfs.go",
        "stat.go",
    ],
    importpath = "github.com/dropbox/dbx_build_tools/procfs",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/shirou/gopsutil/v3/process"],
)

go_test(
    name = "procfs_test",
    srcs = ["stat_test.go"],
    embed = [":procfs"],
    deps = ["//vendor/gopkg.in/check.v1:check_v1"],
)
