load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "codegen",
    srcs = [
        "go_writer.go",
        "line_writer.go",
        "py_writer.go",
    ],
    importpath = "github.com/dropbox/dbx_build_tools/build_tools/codegen",
    visibility = ["//visibility:public"],
)

go_test(
    name = "codegen_test",
    srcs = ["line_writer_test.go"],
    embed = [":codegen"],
    deps = ["//vendor/github.com/stretchr/testify/assert"],
)
