load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "svcctl",
    srcs = [
        "processor.go",
        "service.go",
        "topological_starter.go",
        "topological_stopper.go",
    ],
    importpath = "github.com/dropbox/dbx_build_tools/build_tools/svcctl",
    visibility = ["//visibility:public"],
    deps = [
        "//build_tools/logwriter",
        "//build_tools/svcctl/proc",
        "//build_tools/svcctl/state_machine",
        "//build_tools/svcctl/topological",
        "//cputime",
        "//procfs",
        "//proto/build_tools/svclib",
        "//runfiles",
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/golang.org/x/sync/errgroup",
    ],
)

go_test(
    name = "svcctl_test",
    srcs = ["service_test.go"],
    embed = [":svcctl"],
    deps = [
        "//build_tools/svcctl/state_machine",
        "//proto/build_tools/svclib",
        "//runfiles",
        "//vendor/github.com/stretchr/testify/require",
    ],
)
