load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mypy",
    srcs = ["mypy.pb.go"],
    importpath = "github.com/dropbox/dbx_build_tools/proto/mypy",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/github.com/gogo/protobuf/protoc-gen-gogo/descriptor",
    ],
)
