load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "proto",
    srcs = ["descriptor.go"],
    importpath = "github.com/dropbox/dbx_build_tools/build_tools/codegen/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/gogo/protobuf/protoc-gen-gogo/descriptor",
        "//vendor/github.com/gogo/protobuf/protoc-gen-gogo/generator",
        "//vendor/github.com/gogo/protobuf/protoc-gen-gogo/plugin",
    ],
)
