load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "state_machine",
    srcs = ["state_machine.go"],
    importpath = "github.com/dropbox/dbx_build_tools/build_tools/svcctl/state_machine",
    visibility = ["//visibility:public"],
    deps = ["//proto/build_tools/svclib"],
)
