load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "svclib",
    srcs = ["service.pb.go"],
    importpath = "github.com/dropbox/dbx_build_tools/proto/build_tools/svclib",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/gogo/protobuf/proto",
        "//vendor/google.golang.org/grpc",
        "//vendor/google.golang.org/grpc/codes",
        "//vendor/google.golang.org/grpc/status",
    ],
)
