load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "svcd_lib",
    srcs = ["svcd.go"],
    importpath = "github.com/dropbox/dbx_build_tools/build_tools/svcctl/cmd/svcd",
    visibility = ["//visibility:private"],
    deps = [
        "//build_tools/svcctl",
        "//build_tools/svcctl/svclib",
        "//proto/build_tools/svclib",
        "//vendor/google.golang.org/grpc",
    ],
)

go_binary(
    name = "svcd",
    embed = [":svcd_lib"],
    visibility = ["//visibility:public"],
)
